--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".LoginActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,22 +20,25 @@
         <activity
             android:name=".LiveStreamActivity"
             android:label="@string/title_activity_live_stream"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainMenueActivity" />
         <activity
             android:name=".MediathekActivity"
             android:label="@string/title_activity_mediathek"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainMenueActivity" />
         <activity
             android:name=".CreditsActivity"
             android:label="@string/title_activity_credtis"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainMenueActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity">
+            android:parentActivityName=".MainMenueActivity" />
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="de.codematch.naoray.media_player_app.MainActivity" />
+                android:value=".MainMenueActivity" />
+        <activity
+            android:name=".MainMenueActivity"
+            android:label="@string/title_activity_main_menue">
         </activity>
     </application>
 
