-VideoPlayer in die App integriert -ActionBar der LiveStreamActivity wird ausgeblendet (In der AndroidManifest festgelegt) -Hintergrundfarbe der LiveStreamActivity auf schwarz geändert, damit das Video kein weißen Rand aufweist -StatusBar wird ausgeblendet und erst beim "Reinwischen" wieder sichbar, bis sie dann wieder verschwindet -NavigationBar bleibt die ganze Zeit über sichtbar  ---> Code für den Immersive-Mode vorhanden, aber die NavigationBar überdeckt bei Erscheinen dann die Steuerelemente des Videos und macht bspw. ein Vorspulen unmöglich

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.codematch.naoray.media_player_app">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,8 +21,9 @@
         </activity>
         <activity
             android:name=".LiveStreamActivity"
-            android:label="@string/title_activity_live_stream"
-            android:parentActivityName=".MainMenueActivity" />
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName=".MainMenueActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".MediathekActivity"
             android:label="@string/title_activity_mediathek"
