-Login im Google Login-Template umgesetzt (alte LoginActivity ersetzt) -KeepMeLoggedIn umgesetzt (Speicherung des LoginStatuses) (mit SharedPreferences) -->CheckBox zur Realisierung (behält auch Einstellung bei) (mit SharedPreferences) -AutoComplete der bereits verwendeten E-Mail-Adressen (mit SharedPreferences) -Datenbank integriert (noch nicht vollständig)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.codematch.naoray.media_player_app">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginActivityOriginal"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,13 +41,14 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MainMenueActivity" />
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainMenueActivity" />
+
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainMenueActivity" />
+
         <activity
             android:name=".MainMenueActivity"
-            android:label="@string/title_activity_main_menue">
-        </activity>
+            android:label="@string/title_activity_main_menue"></activity>
     </application>
 
 </manifest>
