PopUp für Card erstellt.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <activity
             android:name=".MainMenuActivity"
             android:label="@string/title_activity_main_menu" />
+        <activity
+            android:name=".CardDescriptionActivity"
+            android:parentActivityName=".MainMenuActivity" />
     </application>
 
 </manifest>
