--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".LoginActivityOriginal"
+            android:name=".LoginActivity"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,32 +23,31 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainMenuActivity"
+            android:label="@string/title_activity_main_menu" />
+        <activity
+            android:name=".CardDescriptionActivity"
+            android:parentActivityName=".MainMenuActivity" />
+        <activity
             android:name=".LiveStreamActivity"
             android:configChanges="orientation|screenSize"
             android:parentActivityName=".MainMenuActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
-            android:name=".MediathekActivity"
-            android:label="@string/title_activity_mediathek"
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainMenuActivity" />
+        <activity
+            android:name=".HelpActivity"
+            android:label="@string/title_activity_help"
             android:parentActivityName=".MainMenuActivity" />
         <activity
             android:name=".CreditsActivity"
             android:label="@string/title_activity_credtis"
             android:parentActivityName=".MainMenuActivity" />
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainMenuActivity" />
-
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainMenuActivity" />
-
-        <activity
-            android:name=".MainMenuActivity"
-            android:label="@string/title_activity_main_menu" />
-        <activity
-            android:name=".CardDescriptionActivity"
+            android:name=".MediathekActivity"
+            android:label="@string/title_activity_mediathek"
             android:parentActivityName=".MainMenuActivity" />
     </application>
 
